# rust-todo-clap

./: Cargo.toml
entity/: Cargo.toml
entity/src/: lib.rs  prelude.rs  todo.rs  user.rs
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20231102_030846_create_user.rs  m20231102_031615_create_todo.rs
src/: args.rs  db.rs  main.rs
src/database/: mod.rs
src/helper/: mod.rs  parse_date.rs
src/models/: mod.rs  todo_models.rs  user_models.rs
src/ops/: mod.rs  todo_ops.rs  user_ops.rs
